...
                            <constraint firstItem="okt-ZP-3g9" firstAttribute="bottom" secondItem="37L-5W-kOZ" secondAttribute="bottom" constant="360" id="wYl-Xe-f50"/>
                            <constraint firstItem="okt-ZP-3g9" firstAttribute="trailing" secondItem="GoL-Au-aTW" secondAttribute="trailing" constant="42" id="y2N-Ph-ce9"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="yIe-T1-qI6"/>
                    <connections>
                        <outlet property="suggestActivity" destination="37L-5W-kOZ" id="CVj-FW-qGL"/>
                        <segue destination="ubZ-YP-Vxu" kind="show" identifier="Questions" id="m4O-Mm-KER"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="RFV-A4-XzZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="6156" y="-171"/>
...
                            <constraint firstItem="43S-yP-qwU" firstAttribute="leading" secondItem="FhE-TK-8lN" secondAttribute="leading" constant="80" id="plC-JX-7ts"/>
                            <constraint firstItem="ww5-to-v21" firstAttribute="leading" secondItem="FhE-TK-8lN" secondAttribute="leading" id="sYj-ic-Lbi"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="X70-xZ-q7i"/>
                    <connections>
                        <outlet property="answerButton1" destination="Tgj-hp-2wB" id="wbS-Ry-TLf"/>
                        <outlet property="answerButton2" destination="gtd-Gs-qcG" id="0ac-DM-I0Z"/>
                        <outlet property="answerButton3" destination="Mgu-l2-0Wq" id="hxH-Kf-FpT"/>
                        <outlet property="backgroundImageView" destination="ww5-to-v21" id="ctr-ta-Bjj"/>
                        <outlet property="buttonStackView" destination="43S-yP-qwU" id="2qn-Uk-7ye"/>
                        <outlet property="questionText" destination="njz-3X-bX8" id="5t0-JY-GCO"/>
                        <segue destination="BYZ-38-t0r" kind="show" identifier="AdviceSegue" id="yBk-rK-hPQ"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="jf0-BY-wiz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="7273" y="568"/>
...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bW2-HZ-yV7" secondAttribute="trailing" constant="24" id="ubK-IW-s5K"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="bVl-24-chR"/>
                    <connections>
                        <outlet property="adviceText" destination="bW2-HZ-yV7" id="Pie-9r-WFz"/>
                        <outlet property="commandButton" destination="bnd-Rf-BOA" id="zXI-G3-Iyh"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="8956" y="582"/>
        </scene>
...
                            <constraint firstItem="MbR-2Z-4WC" firstAttribute="leading" secondItem="Dpp-VA-NAb" secondAttribute="leading" constant="97" id="ND1-Ka-bsJ"/>
                            <constraint firstItem="Dpp-VA-NAb" firstAttribute="bottom" secondItem="MbR-2Z-4WC" secondAttribute="bottom" constant="170" id="dG9-n6-V6b"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="Q1T-6P-MDm"/>
                    <connections>
                        <outlet property="meditationButton" destination="2Kz-un-IMp" id="coC-2U-kXq"/>
                        <outlet property="yogaButton" destination="5ej-gk-zMW" id="JJr-zQ-pbI"/>
                        <segue destination="C13-9s-Ezm" kind="show" identifier="MeditationSegue" id="92t-lL-dcr"/>
                        <segue destination="3NX-ab-ZEY" kind="show" identifier="YogaSegue" id="jNA-27-VqZ"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Jje-2B-NwZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
